# contextualplanner-android

./: .gitignore  .gitmodules  README.md  build.gradle  settings.gradle
contextualplanner/: build.gradle
contextualplanner/src/androidTest/java/com/contextualplanner/: BnfPasrer_test.kt  DocExamplesTest.kt  PlannerTest.kt
contextualplanner/src/main/cpp/: CMakeLists.txt
contextualplanner/src/main/cpp/jni/: androidlog.hpp  contextualplanner-jni.cpp  domain-jni.cpp  goalremovedtracker-jni.cpp  jobjectsconversions.cpp  jobjectsconversions.hpp  problem-jni.cpp  problem-jni.hpp
contextualplanner/src/main/cpp/jni/trackers/: factsaddedtracker-jni.cpp  goalsremovedtracker-jni.cpp
contextualplanner/src/main/cpp/jni/types/: domain-jni.cpp  domain-jni.hpp  problem-jni.cpp  setofinferences-jni.cpp  setofinferences-jni.hpp
contextualplanner/src/main/cpp/jni/util/: fact-jni.cpp  print-jni.cpp  replacevariables-jni.cpp
contextualplanner/src/main/cpp/jni/util/trackers/: factsaddedtracker-jni.cpp  goalsremovedtracker-jni.cpp
contextualplanner/src/main/java/com/contextualplanner/: Action.kt  ContextualPlanner.kt  Domain.kt  Goal.kt  GoalRemovedTracker.kt  Problem.kt
contextualplanner/src/main/java/com/contextualplanner/trackers/: FactsAddedTracker.kt  GoalsRemovedTracker.kt
contextualplanner/src/main/java/com/contextualplanner/types/: Action.kt  ActionAndGoal.kt  Domain.kt  Goal.kt  GoalWithPriority.kt  Inference.kt  OneStepOfPlannerResult.kt  Problem.kt  SetOfInferences.kt
contextualplanner/src/main/java/com/contextualplanner/types/detail/: DisposableWithId.kt
contextualplanner/src/main/java/com/contextualplanner/util/: Fact.kt  Print.kt  ReplaceVariables.kt
contextualplanner/src/main/java/com/contextualplanner/util/detail/: EnsureInitialized.kt
src/androidTest/java/com/contextualplanner/: BnfPasrer_test.kt
src/main/: AndroidManifest.xml
src/main/cpp/jni/: bnfparser-jni.cpp  contextualplanner-jni.hpp  domain-jni.cpp  domain-jni.hpp  jobjectsconversions.hpp
src/main/java/com/contextualplanner/: BnfParser.kt  TaskTree.kt
src/main/res/values/: strings.xml
(+2 files in other folders)
